hard-gists/9901745/run.log
=== Docker Run Log for 9901745 ===
Started at: Mi 29. Okt 18:34:52 CET 2025

[2025-10-29 18:34:52] START: Running container for 9901745
[2025-10-29 18:34:52] SUCCESS: Container a71786b83b9d9a753da9d7de1d05d83fe830af010a095da286bb809a8eb9a774 started for 9901745
=== Container logs for 9901745 ===
  File "/snippet.py", line 15
    print "Length = %d" % geom.Length() + " meters"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9901745 ===
[2025-10-29 18:34:54] INFO: Container a71786b83b9d9a753da9d7de1d05d83fe830af010a095da286bb809a8eb9a774 has stopped
